--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -7368,10 +7368,10 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	.hwc-alphabet-container{
 		border-bottom: 1px dotted @color3;
 		padding-bottom: 1em;
+		width: 100%;
 	}
-	//.quicktabs-tabpage{
 	.hwc-char-link{
-		padding: 0px 13px;
+		padding: 0px 13px 0 0;
 		&.disabled {
 			cursor: text;
 			&:hover{
@@ -7402,9 +7402,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		min-height: 196px;
 		.views-field-field-logo{
 			    min-height: 146px;
-			    //border: 1px solid #ccc;
 			    max-width: 150px;
-			    padding: 1em;
 			    margin: 0 auto;
 		}
 		.views-field-title-field, .views-field-name-field{
@@ -9926,7 +9924,8 @@ input#edit-field-image-und-0-upload::before {
 /*enterprise europe network*/
 .page-enterprise-europe-network,
 .page-national-focal-points,
-.page-campaign-media-partners{
+.page-campaign-media-partners,
+.page-campaign-partners-official-campaign-partners{
 	.main-container.container-fluid{
 		padding-left: 0px;
 		padding-right: 0px;
@@ -9947,6 +9946,8 @@ input#edit-field-image-und-0-upload::before {
 			.field-type-text-with-summary{
 				padding-right: 15px;
 				padding-left: 15px;
+				width: 67%;
+				margin: 0 auto;
 				p{
 					text-align: center;
     				font-size: 1.2em;
